syntax = "proto3";

package proto.signer.v1;

option go_package = "github.com/davidmdm/connect-playground/internal/proto/signer/v1;signerv1";

import "google/protobuf/struct.proto";

message SignRequest {
  string issuer = 1;
  string subject = 2;
  repeated string audience = 3;
  google.protobuf.Struct custom_claims = 4;
}

message SignResponse {
  string token = 1;
}

service SignerService {
  rpc Sign(SignRequest) returns (SignResponse) {}
}
